# ha-app-transcribe.cpp

./: .gitignore  README.md  SPEC.md
.agents/memory/: MEMORY.md  feedback_docs_link_upstream.md  feedback_log_severity_by_mistake_likelihood.md  feedback_silent_ignore_visible_log.md  mac-no-docker-use-apple-container.md
.github/: release-drafter-prerelease.yml
.github/workflows/: build.yml  ci.yml  release-drafter.yml
tasks/: catalog.json  notes.md  plan.md  todo.md
transcribe-cpp/: .README.j2  AGENTS.md  DOCS.md  Dockerfile  apparmor.txt  config.yaml  pyproject.toml
transcribe-cpp/rootfs/etc/s6-overlay/s6-rc.d/convert-worker/: run
transcribe-cpp/rootfs/etc/s6-overlay/s6-rc.d/discovery/: run
transcribe-cpp/rootfs/etc/s6-overlay/s6-rc.d/init-perms/: run  up
transcribe-cpp/rootfs/etc/s6-overlay/s6-rc.d/transcribe-cpp/: finish  run
transcribe-cpp/scripts/: gen_registry.py
transcribe-cpp/tests/: test_audio.py  test_convert.py  test_detect.py  test_diarize.py  test_enhance.py  test_main_resolve.py  test_model_options.py  test_models.py  test_nemo_driver.py  test_streaming.py  test_weighthash.py  test_worker.py
transcribe-cpp/tests/fixtures/detect/: canary.json  canary_qwen.json  cohere.json  funasr_nano.json  gigaam.json  granite.json  granite_nar.json  medasr.json  moonshine.json  moonshine_streaming.json  parakeet.json  qwen3_asr.json  sensevoice.json  voxtral.json  voxtral_realtime.json  whisper.json
transcribe-cpp/tests/fixtures/envs/canary/: pyproject.toml
transcribe-cpp/tests/fixtures/envs/canary_qwen/: pyproject.toml
transcribe-cpp/tests/fixtures/envs/cohere/: pyproject.toml
transcribe-cpp/tests/fixtures/envs/funasr_nano/: pyproject.toml
transcribe-cpp/tests/fixtures/envs/gigaam/: pyproject.toml
transcribe-cpp/tests/fixtures/envs/granite/: pyproject.toml
transcribe-cpp/tests/fixtures/envs/granite_nar/: pyproject.toml
transcribe-cpp/tests/fixtures/envs/medasr/: pyproject.toml
transcribe-cpp/tests/fixtures/envs/moonshine/: pyproject.toml
transcribe-cpp/tests/fixtures/envs/moonshine_streaming/: pyproject.toml
transcribe-cpp/tests/fixtures/envs/parakeet/: pyproject.toml
transcribe-cpp/tests/fixtures/envs/qwen3_asr/: pyproject.toml
transcribe-cpp/tests/fixtures/envs/sensevoice/: pyproject.toml
transcribe-cpp/tests/fixtures/envs/voxtral/: pyproject.toml
transcribe-cpp/tests/fixtures/envs/voxtral_realtime/: pyproject.toml
transcribe-cpp/tests/fixtures/envs/whisper/: pyproject.toml
transcribe-cpp/translations/: en.yaml  ko.yaml
transcribe-cpp/wyoming_transcribe_cpp/: __init__.py  __main__.py  audio.py  const.py  convert.py  convert_worker.py  detect.py  diarize.py  engine.py  enhance.py  handler.py  model_options.py  models.py  nemo_driver.py  registry.json  streaming.py  weighthash.py
