[project]
name = "transcribe-cohere-env"
version = "0.1.0"
description = "Python env for Cohere ASR reference dumps"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "gguf>=0.10",
    "huggingface-hub>=0.30",
    "librosa>=0.10",
    "protobuf>=4.25",
    "safetensors>=0.4",
    "sentencepiece>=0.2",
    "soundfile>=0.12",
    "numpy>=1.26",
    "transformers>=5.4",
]
