[project]
name = "transcribe-funasr-nano-env"
version = "0.1.0"
description = "Python env for Fun-ASR-Nano reference dumps and conversion (FunASR + Qwen3 LLM via transformers)"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Exact pin: FunASR's AutoModel registry, FunASRNano class layout, and
    # `inference()` / `generate()` signatures are framework-version specific.
    # 1.3.1 is the latest released as of intake (2026-05) and is what we
    # validate per-tensor tolerances against.
    "funasr==1.3.1",
    # Qwen3-0.6B LLM is loaded via transformers; pin matches the qwen3_asr
    # env so the two FunAudioLLM-with-Qwen ports are reproducible against
    # the same transformers.
    "transformers==4.57.6",
    "torch>=2.2",
    "torchaudio>=2.2",
    "huggingface-hub>=0.30",
    "soundfile>=0.12",
    "librosa>=0.10",
    "numpy>=1.26",
    "gguf>=0.10",
    "sentencepiece>=0.2",
    "kaldiio>=2.18",
    "tiktoken>=0.7",
    "accelerate>=1.0",
    "safetensors>=0.4",
]
