[project]
name = "transcribe-granite-env"
version = "0.1.0"
description = "Python env for IBM Granite Speech reference dumps and conversion"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "gguf>=0.10",
    "huggingface-hub>=0.30",
    "librosa>=0.10",
    "numpy>=1.26",
    "protobuf>=4.25",
    "safetensors>=0.4",
    "sentencepiece>=0.2",
    "soundfile>=0.12",
    "transformers>=5.8",
    "accelerate>=1.0",
    "peft>=0.11",
]
